Fix color contrast issue

--- a/assets/main.css
+++ b/assets/main.css
@@ -207,14 +207,14 @@ footer h6 a {
 /* --- Index page --- */
 #index-hero {
   background: #5C7280;
-  color: #E2E8EB;
+  color: #F0F3F4;
   text-align: center;
   margin-top: -5px;
   padding-top: 15px;
 }
 
 #index-hero h1 {
-  color: #E2E8EB;
+  color: #F0F3F4;
   margin-bottom: 15px;
   font-weight: bold;
 }
